--- a/metadata.yaml
+++ b/metadata.yaml
@@ -46,5 +46,6 @@ subjects:
 - !lcsh 'Yarico (Fictitious character) -- Drama'
 - !lcsh 'West Indies -- Drama'
 - !lcc 'PR'
+- GITenberg
 title: 'Inkle and Yarico: An opera, in three acts'
 url: http://www.gutenberg.org/ebooks/36621
